--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "shortletsandmore",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://heightsInnov.github.io",
+  "homepage": "https://heights-innovations-technology-ltd.github.io/ShortletsAndMoreFrontend/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
