--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "shortletsandmore",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "homepage": "https://heights-innovations-technology-ltd.github.io/ShortletsAndMoreFrontend/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
