--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
+  "homepage": "https://nierowheezy.github.io/shortletsandmore",
   "name": "shortletsandmore",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://heightsInnov.github.io",
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,7 +14,6 @@
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
-    "save-dev": "^0.0.1-security",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "gh-pages": "^4.0.0",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
   }
