--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
     "classnames": "^2.3.2",
+    "date-fns": "^2.29.3",
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
+    "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.41.5",
     "react-hot-toast": "^2.4.0",
