--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.41.5",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.6.0",
+    "react-loading-icons": "^1.1.0",
     "react-paginate": "^8.1.4",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.4",
