--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.2.2",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
+    "framer-motion": "^8.5.2",
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-calendar": "^4.0.0",
